2016-03-09  Joseph Myers  <joseph@codesourcery.com>

	[BZ #19790]
	* sysdeps/ieee754/ldbl-128ibm/s_rintl.c [USE_AS_NEARBYINTL]
	(rintl): Define as macro.
	[USE_AS_NEARBYINTL] (__rintl): Likewise.
	(__rintl) [USE_AS_NEARBYINTL]: Use SET_RESTORE_ROUND_NOEX instead
	of fesetround.  Ensure results are evaluated before end of scope.
	* sysdeps/ieee754/ldbl-128ibm/s_nearbyintl.c: Define
	USE_AS_NEARBYINTL and include s_rintl.c.
	* sysdeps/powerpc/fpu/fenv_private.h (libc_feholdsetround_ppc):
	Disable exception traps in new environment.
	(libc_feholdsetround_ppc_ctx): Likewise.

2016-03-08  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/x86_64/tst-audit10.c: #include <cpu-features.h>.
	* sysdeps/x86_64/tst-audit10-aux.c: Move audit_test extern decl ...
	(tst_audit10_aux) [__AVX512F__]: ... here.

2016-03-08  Aurelien Jarno  <aurelien@aurel32.net>

	* include/sys/auxv.h: New file.

2016-03-08  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #19759]
	* sysdeps/x86/bits/string.h (_HAVE_STRING_ARCH_mempcpy): New.

2016-03-08  Gabriel F. T. Gomes  <gftg@linux.vnet.ibm.com>

	* sysdeps/powerpc/bits/fenvinline.h (feraiseexcept): Remove use of %s
	operand modifier.
	(feclearexcept): Likewise.

2016-03-08  Carlos Eduardo Seo  <cseo@linux.vnet.ibm.com>

	* sysdeps/powerpc/dl-procinfo.c (_dl_powerpc_cap_flags): Updated
	to reflect the entire 32-bit HWCAP.
	* sysdeps/powerpc/dl-procinfo.h: Code cleanup.
	(_DL_HWCAP_FIRST): Removed.  Replaced by 0 accordingly.

2016-03-08  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #19783]
	* benchtests/Makefile (run-bench): Replace $(rtld-prefix) with
	$(test-via-rtld-prefix).
	($(binaries-bench)): Replace $(+link) with $(+link-tests).

2016-03-08  Florian Weimer  <fweimer@redhat.com>

	* sunrpc/key_call.c (key_call_keyenvoy): Use int status instead of
	union wait.  Report any non-zero exit status as error.

2016-03-07  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* posix/tst-execvpe5.c (do_test): Fix fix test invocation when